# livraria-app

./: .gitignore  Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
livraria_app/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  models.py  serializers.py
main/migrations/: 0001_initial.py  0002_livro_usuario.py
main/views/: autor.py  categoria.py  editora.py  livro.py
static/: staticfiles.json
